--- a/DOM Scripting By Example/1-adding-and-removing-names/1-tour-the-application/start/css/style.css
+++ b/DOM Scripting By Example/1-adding-and-removing-names/1-tour-the-application/start/css/style.css
@@ -16,7 +16,7 @@ form button {
   color: white;  
 }
 h1 {
-  font-family: 'Courgette', cursive;
+  font-family: poppins;
   text-shadow: 0 1px 0 rgba(0,0,0, .4);
   line-height: .65;
   margin-top: .5em;
